build/k8s/qaw/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: account
  name: account
  namespace: qaw
  annotations:
    konghq.com/plugins: kong-jwt
spec:
  ports:
  - port: 51000
    protocol: TCP
    targetPort: 5000
  selector:
    app: account
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth
  name: auth
  namespace: qaw
spec:
  ports:
  - port: 51001
    protocol: TCP
    targetPort: 5000
  selector:
    app: auth
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: contest
  name: contest
  namespace: qaw
  annotations:
    konghq.com/plugins: kong-jwt
spec:
  ports:
  - port: 51002
    protocol: TCP
    targetPort: 5000
  selector:
    app: contest
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: course
  name: course
  namespace: qaw
  annotations:
    konghq.com/plugins: kong-jwt
spec:
  ports:
  - port: 51003
    protocol: TCP
    targetPort: 5000
  selector:
    app: course
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: league
  name: league
  namespace: qaw
  annotations:
    konghq.com/plugins: kong-jwt
spec:
  ports:
  - port: 51004
    protocol: TCP
    targetPort: 5000
  selector:
    app: league
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mailer
  name: mailer
  namespace: qaw
  annotations:
    konghq.com/plugins: kong-jwt
spec:
  ports:
  - port: 51005
    protocol: TCP
    targetPort: 80
  selector:
    app: mailer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: member
  name: member
  namespace: qaw
  annotations:
    konghq.com/plugins: kong-jwt
spec:
  ports:
  - port: 51006
    protocol: TCP
    targetPort: 5000
  selector:
    app: member
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notification
  name: notification
  namespace: qaw
  annotations:
    konghq.com/plugins: kong-jwt
spec:
  ports:
  - port: 51007
    protocol: TCP
    targetPort: 3000
  selector:
    app: notification
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: score
  name: score
  namespace: qaw
  annotations:
    konghq.com/plugins: kong-jwt
spec:
  ports:
  - port: 51008
    protocol: TCP
    targetPort: 3000
  selector:
    app: score
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sport
  name: sport
  namespace: qaw
  annotations:
    konghq.com/plugins: kong-jwt
spec:
  ports:
  - port: 51009
    protocol: TCP
    targetPort: 5000
  selector:
    app: sport
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wager
  name: wager
  namespace: qaw
  annotations:
    konghq.com/plugins: kong-jwt
spec:
  ports:
  - port: 51010
    protocol: TCP
    targetPort: 5000
  selector:
    app: wager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-pusher
  name: web-pusher
  namespace: qaw
  annotations:
    konghq.com/plugins: kong-jwt
spec:
  ports:
  - port: 51011
    protocol: TCP
    targetPort: 3000
  selector:
    app: web-pusher
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: static
  name: static
  namespace: qaw
spec:
  ports:
  - port: 41000
    protocol: TCP
    targetPort: 80
  selector:
    app: static
---
