build/k8s/qaw/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: account
  namespace: qaw
  annotations:
    kubernetes.io/ingress.class: prod
spec:
  rules:
  - host: account.qaw.techtapir.com
    http:
      paths:
      - backend:
          serviceName: account
          servicePort: 50000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth
  namespace: qaw
  annotations:
    kubernetes.io/ingress.class: prod
spec:
  rules:
  - host: auth.qaw.techtapir.com
    http:
      paths:
      - backend:
          serviceName: auth
          servicePort: 50001
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: contest
  namespace: qaw
  annotations:
    kubernetes.io/ingress.class: prod
spec:
  rules:
  - host: contest.qaw.techtapir.com
    http:
      paths:
      - backend:
          serviceName: contest
          servicePort: 50002
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: course
  namespace: qaw
  annotations:
    kubernetes.io/ingress.class: prod
spec:
  rules:
  - host: course.qaw.techtapir.com
    http:
      paths:
      - backend:
          serviceName: course
          servicePort: 50003
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: league
  namespace: qaw
  annotations:
    kubernetes.io/ingress.class: prod
spec:
  rules:
  - host: league.qaw.techtapir.com
    http:
      paths:
      - backend:
          serviceName: league
          servicePort: 50004
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: member
  namespace: qaw
  annotations:
    kubernetes.io/ingress.class: prod
spec:
  rules:
  - host: member.qaw.techtapir.com
    http:
      paths:
      - backend:
          serviceName: member
          servicePort: 50006
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: notification
  namespace: qaw
  annotations:
    kubernetes.io/ingress.class: prod
spec:
  rules:
  - host: notification.qaw.techtapir.com
    http:
      paths:
      - backend:
          serviceName: notification
          servicePort: 50007
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: score
  namespace: qaw
  annotations:
    kubernetes.io/ingress.class: prod
spec:
  rules:
  - host: score.qaw.techtapir.com
    http:
      paths:
      - backend:
          serviceName: score
          servicePort: 50008
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sport
  namespace: qaw
  annotations:
    kubernetes.io/ingress.class: prod
spec:
  rules:
  - host: sport.qaw.techtapir.com
    http:
      paths:
      - backend:
          serviceName: sport
          servicePort: 50009
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wager
  namespace: qaw
  annotations:
    kubernetes.io/ingress.class: prod
spec:
  rules:
  - host: wager.qaw.techtapir.com
    http:
      paths:
      - backend:
          serviceName: wager
          servicePort: 50010
---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: static
#  namespace: qaw
#  annotations:
#    kubernetes.io/ingress.class: prod
#spec:
#  rules:
#  - http:
#      paths:
#      - path: /
#        backend:
#          serviceName: static
#          servicePort: 40000
#---
